--- a/shared/nav.html
+++ b/shared/nav.html
@@ -17,7 +17,7 @@
       <span class="brand-title">Integrated Science Tools</span>
     </a>
     <div class="header-controls">
-      <span class="nav-badge" aria-live="polite">Now: Home</span>
+      <span class="nav-badge" aria-live="polite">Home</span>
       <button class="theme-toggle" type="button" aria-label="Switch color theme" title="Switch color theme">◐</button>
       <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle navigation">
         <span></span>
