--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -47,6 +47,16 @@
           <p>Run a virtual titration and watch pH shift in real time&mdash;then connect the curve to acids and bases.</p>
           <a class="button-link" href="./sims/ph-titration.html">Open Simulation</a>
         </article>
+        <article class="card">
+          <h3>Coulomb's Law Playground</h3>
+          <p>Test how charge size and distance change electric force, then explain attraction versus repulsion.</p>
+          <a class="button-link" href="./sims/coulombs-law-playground.html">Open Simulation</a>
+        </article>
+        <article class="card">
+          <h3>Intermolecular Forces Lab</h3>
+          <p>Compare London dispersion, dipole-dipole, hydrogen bonding, and ion-dipole interactions in a live model.</p>
+          <a class="button-link" href="./sims/intermolecular_forces.html">Open Simulation</a>
+        </article>
       </div>
     </section>
   </main>
