--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -37,6 +37,11 @@
           <p>Explore how waves and vibrations amplify, and learn why resonance can help or wreck a system.</p>
           <a class="button-link" href="./sims/resonance-lab.html">Open Simulation</a>
         </article>
+        <article class="card">
+          <h3>Unit 3 Test Checklist</h3>
+          <p>Reference resource: use this checklist page to validate Unit 3 simulator behavior and readiness.</p>
+          <a class="button-link" href="./sims/unit-3-test-checklist.html">Open Resource</a>
+        </article>
       </div>
     </section>
   </main>
