--- a/unit-3/sims/orbital-motion.html
+++ b/unit-3/sims/orbital-motion.html
@@ -8,6 +8,7 @@
   <title>Orbital Motion Simulator | Integrated Science Tools</title>
   <meta name="description" content="Interactive orbital motion simulator for circular velocity and escape velocity.">
   <link rel="stylesheet" href="../../assets/css/site.css">
+  <link rel="stylesheet" href="../../assets/css/sims/sim-base.css">
   <script src="../../assets/js/site.js" defer></script>
   <script src="../../assets/js/sim-enhancer.js" defer></script>
   <link rel="stylesheet" href="../../assets/css/sims/orbital-motion.css">
