--- a/unit-3/sims/resonance-lab.html
+++ b/unit-3/sims/resonance-lab.html
@@ -8,6 +8,7 @@
   <title>Resonance Lab | Integrated Science Tools</title>
   <meta name="description" content="Interactive resonance simulator for frequency ratio and damping response.">
   <link rel="stylesheet" href="../../assets/css/site.css">
+  <link rel="stylesheet" href="../../assets/css/sims/sim-base.css">
   <script src="../../assets/js/site.js" defer></script>
   <script src="../../assets/js/sim-enhancer.js" defer></script>
   <link rel="stylesheet" href="../../assets/css/sims/resonance-lab.css">
