--- a/unit-3/sims/unit-3-test-checklist.html
+++ b/unit-3/sims/unit-3-test-checklist.html
@@ -7,6 +7,7 @@
   <script src="../../assets/js/theme-init.js"></script>
   <title>Unit 3 Simulator Test Checklist | Integrated Science Tools</title>
   <link rel="stylesheet" href="../../assets/css/site.css">
+  <link rel="stylesheet" href="../../assets/css/sims/sim-base.css">
   <script src="../../assets/js/site.js" defer></script>
   <link rel="stylesheet" href="../../assets/css/sims/energy-conversion.css">
 </head>
