--- a/unit-4/index.html
+++ b/unit-4/index.html
@@ -37,6 +37,11 @@
           <p>Play with expansion scenarios and compare models to understand how scientists test ideas about the universe.</p>
           <a class="button-link" href="./sims/cosmic-expansion.html">Open Simulation</a>
         </article>
+        <article class="card">
+          <h3>Electric Field Mapper</h3>
+          <p>Map electric field direction and strength around a source charge using distance and angle.</p>
+          <a class="button-link" href="./sims/electric-field-mapper.html">Open Simulation</a>
+        </article>
       </div>
     </section>
   </main>
