--- a/unit-5/index.html
+++ b/unit-5/index.html
@@ -37,6 +37,11 @@
           <p>Experiment with ramps and friction to see how angles and surfaces change speed and acceleration.</p>
           <a class="button-link" href="./sims/ramp-dynamics.html">Open Simulation</a>
         </article>
+        <article class="card">
+          <h3>Newton's 2nd Law Lab</h3>
+          <p>Vary net force and mass to quantify acceleration, final speed, and displacement outcomes.</p>
+          <a class="button-link" href="./sims/newtons-second-law-lab.html">Open Simulation</a>
+        </article>
       </div>
     </section>
   </main>
