--- a/unit-1/sims/equation-balancer.html
+++ b/unit-1/sims/equation-balancer.html
@@ -7,6 +7,7 @@
     <script src="../../assets/js/theme-init.js"></script>
     <title>Equation Balancer & Stoichiometry | Integrated Science Tools</title>
     <link rel="stylesheet" href="../../assets/css/site.css">
+  <link rel="stylesheet" href="../../assets/css/sims/sim-base.css">
     <script src="../../assets/js/site.js" defer></script>
     <script src="../../assets/js/sim-enhancer.js" defer></script>
     <link rel="stylesheet" href="../../assets/css/sims/equation-balancer.css">
