--- a/unit-1/sims/lewis-dot.html
+++ b/unit-1/sims/lewis-dot.html
@@ -8,6 +8,7 @@
     <title>Lewis Dot Structure Builder | Integrated Science Tools</title>
     <meta name="description" content="Interactive Lewis Dot Structure Builder simulation.">
     <link rel="stylesheet" href="../../assets/css/site.css">
+  <link rel="stylesheet" href="../../assets/css/sims/sim-base.css">
     <script src="../../assets/js/site.js" defer></script>
     <script src="../../assets/js/sim-enhancer.js" defer></script>
     <link rel="stylesheet" href="../../assets/css/sims/lewis-dot.css">
